libs/bng/test/positive/0101_dimer_extra_component.bngl
# OK
# checking that extra component 'p' is accepted

begin parameters
   kp 0.00001
   km 1
end parameters

begin molecule types
   A(a,p~0~1)
end molecule types

begin reaction rules
  A(a,p) + A(a) <-> A(a!1).A(a!1,p) kp, km
end reaction rules
