libs/bng/test/negative/N0204_rxn_invalid_comp_state.bngl
# FAIL
# OUTPUT: error: State name '0' was not declared as allowed for component 'a'.

begin parameters
   kp 0.00001
   km 1
end parameters

begin molecule types
   A(a,p~0~1)
end molecule types

begin reaction rules
  A(a~0) + A(a) <-> A(a!1).A(a!1) kp, km
end reaction rules
